--- a/about.html
+++ b/about.html
@@ -84,8 +84,8 @@
                             <div class="dropdown-menu m-0">
                                 <a href="appointment.html" class="dropdown-item">Appointment</a>
                                 <a href="feature.html" class="dropdown-item">Features</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="404.html" class="dropdown-item">404 Page</a>
+                                <a href="testimonial.html" class="dropdown-item">Reviews</a>
+                               
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact Us</a>
@@ -184,7 +184,7 @@
                                 </div>
                             </div>
                             <div class="team-content text-center border border-primary border-top-0 rounded-bottom p-4">
-                                <h5>Nicole Watetu</h5>
+                                <h5>Patricia the stylist</h5>
                                 <p class="mb-0">Experienced hairstylist</p>
                             </div>
                         </div>
