--- a/appointment.html
+++ b/appointment.html
@@ -85,7 +85,7 @@
                             <div class="dropdown-menu m-0">
                                 <a href="appointment.html" class="dropdown-item active">Appointment</a>
                                 <a href="feature.html" class="dropdown-item">Services</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonials</a>
+                                <a href="testimonial.html" class="dropdown-item">Reviews</a>
                                
                             </div>
                         </div>
