--- a/feature.html
+++ b/feature.html
@@ -83,8 +83,8 @@
                             <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
                                 <a href="appointment.html" class="dropdown-item">Appointment</a>
-                                <a href="feature.html" class="dropdown-item active">Hairstyles</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                                <a href="Hairstyles.html" class="dropdown-item active">Hairstyles</a>
+                                <a href="testimonial.html" class="dropdown-item">Reviews</a>
                                 
                             </div>
                         </div>
@@ -128,18 +128,21 @@
                         <figure class="figure">
                             <img src="img/passiontwists.jpg" alt="Passion twists" class="figure-img img-fluid rounded">
                             <figcaption class="figure-caption">passion twists</figcaption>
+                            <figcaption class="figure-caption">price 2800</figcaption>
                         </figure>
                     </div>
                     <div class="col-md-4">
                         <figure class="figure">
                             <img src="img/butterflylocs.jpg" alt="butterflylocs" class="figure-img img-fluid rounded">
                             <figcaption class="figure-caption">butterfly locs</figcaption>
+                            <figcaption class="figure-caption">price 2500</figcaption>
                         </figure>
                     </div>
                     <div class="col-md-4">
                         <figure class="figure">
                             <img src="img/fauxlocs.jpg" alt="faux locs" class="figure-img img-fluid rounded">
                             <figcaption class="figure-caption">Faux locs</figcaption>
+                            <figcaption class="figure-caption">price 2800</figcaption>
                         </figure>
                     </div>
                 </div>
@@ -150,18 +153,21 @@
                         <figure class="figure">
                             <img src="img/knotless.jpg" alt="knotless" class="figure-img img-fluid rounded">
                             <figcaption class="figure-caption">Knotless braids</figcaption>
+                            <figcaption class="figure-caption">price 1500</figcaption>
                         </figure>
                     </div>
                     <div class="col-md-4">
                         <figure class="figure">
                             <img src="img/Goddesslocs.jpg" alt="butterflylocs" class="figure-img img-fluid rounded">
                             <figcaption class="figure-caption">Goddess locs</figcaption>
+                            <figcaption class="figure-caption">price 1800</figcaption>
                         </figure>
                     </div>
                     <div class="col-md-4">
                         <figure class="figure">
                             <img src="img/ririlocs.jpg" alt="faux locs" class="figure-img img-fluid rounded">
                             <figcaption class="figure-caption">Riri locs</figcaption>
+                            <figcaption class="figure-caption">price 2800</figcaption>
                         </figure>
                     </div>
                 </div>
@@ -172,18 +178,21 @@
                         <figure class="figure">
                             <img src="img/Fulanibraids.jpg" alt="fulani braids" class="figure-img img-fluid rounded">
                             <figcaption class="figure-caption">fulani braids</figcaption>
+                            <figcaption class="figure-caption">price 1000</figcaption>
                         </figure>
                     </div>
                     <div class="col-md-4">
                         <figure class="figure">
                             <img src="img/Jumboknotless.jpg" alt="Jumbo knotless braids" class="figure-img img-fluid rounded">
                             <figcaption class="figure-caption">Jumboknotless</figcaption>
+                            <figcaption class="figure-caption">price 1800</figcaption>
                         </figure>
                     </div>
                     <div class="col-md-4">
                         <figure class="figure">
                             <img src="img/marleytwists.jpg" alt="Marley twists" class="figure-img img-fluid rounded">
                             <figcaption class="figure-caption">Marley twists</figcaption>
+                            <figcaption class="figure-caption">price 2000</figcaption>
                         </figure>
                     </div>
                 </div>
