--- a/contact.html
+++ b/contact.html
@@ -84,8 +84,7 @@
                                 <a href="appointment.html" class="dropdown-item">Appointment</a>
                                 <a href="feature.html" class="dropdown-item">Features</a>
                                 
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                                <a href="404.html" class="dropdown-item">404 Page</a>
+                                <a href="testimonial.html" class="dropdown-item">Reviews</a>
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
@@ -118,7 +117,7 @@
                     <div class="sub-style mb-4">
                         <h4 class="sub-title text-white px-3 mb-0">Contact Us</h4>
                     </div>
-                    <p class="mb-0 text-black-50">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat deleniti amet at atque sequi quibusdam cumque itaque repudiandae temporibus, eius nam mollitia voluptas maxime veniam necessitatibus saepe in ab? Repellat!</p>
+                    <p class="mb-0 text-black-50">Have a question or want to book an appointment? Don't hesitate to reach out to us!</p>
                 </div>
                 <div class="row g-4 align-items-center">
                     <div class="col-lg-5 col-xl-5 contact-form wow fadeInLeft" data-wow-delay="0.1s">
@@ -134,8 +133,8 @@
                             <div class="d-flex flex-column align-items-center text-center mb-4">
                                 <div class="bg-white d-flex align-items-center justify-content-center mb-3" style="width: 90px; height: 90px; border-radius: 50px;"><i class="fa fa-phone-alt fa-2x text-primary"></i></div>
                                 <h4 class="text-dark">Mobile</h4>
-                                <p class="mb-0 text-white">+2540000000000</p>
-                                <p class="mb-0 text-white">+2540000000000</p>
+                                <p class="mb-0 text-white">+254705688543</p>
+                                <p class="mb-0 text-white">+254729423232</p>
                             </div>
                            
                             <div class="d-flex flex-column align-items-center text-center">
@@ -187,6 +186,7 @@
                             <h4 class="mb-4 text-white">Shuka services</h4>
                             <a href=""><i class="fas fa-angle-right me-2"></i> All Services</a>
                             <a href=""><i class="fas fa-angle-right me-2"></i>Knotless braids</a>
+                            <p>PRICE:Ksh1500</p>
                             <a href=""><i class="fas fa-angle-right me-2"></i>Goddess Braids</a>
                             <a href=""><i class="fas fa-angle-right me-2"></i>Fauxlocs</a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Butterfly locs</a>
