--- a/testimonial.html
+++ b/testimonial.html
@@ -82,9 +82,9 @@
                             <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
                                 <a href="appointment.html" class="dropdown-item">Appointment</a>
-                                <a href="feature.html" class="dropdown-item">Features</a>
-                                <a href="testimonial.html" class="dropdown-item active">Testimonial</a>
-                                <a href="404.html" class="dropdown-item">404 Page</a>
+                                <a href="feature.html" class="dropdown-item">Hairstyle</a>
+                                <a href="testimonial.html" class="dropdown-item active">Reviews</a>
+                            
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact Us</a>
@@ -99,11 +99,11 @@
         <!-- Header Start -->
         <div class="container-fluid bg-breadcrumb">
             <div class="container text-center py-5" style="max-width: 900px;">
-                <h3 class="text-white display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Testimonial</h1>
+                <h3 class="text-white display-3 mb-4 wow fadeInDown" data-wow-delay="0.1s">Reviews</h1>
                 <ol class="breadcrumb justify-content-center mb-0 wow fadeInDown" data-wow-delay="0.3s">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                     <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                    <li class="breadcrumb-item active text-primary">Testimonial</li>
+                    <li class="breadcrumb-item active text-primary">Reviews</li>
                 </ol>    
             </div>
         </div>
@@ -115,7 +115,7 @@
             <div class="container py-5">
                 <div class="section-title mb-5">
                     <div class="sub-style">
-                        <h4 class="sub-title text-white px-3 mb-0">Testimonial</h4>
+                        <h4 class="sub-title text-white px-3 mb-0">Reviews</h4>
                     </div>
                     <h1 class="display-3 mb-4">What Clients are Say</h1>
                 </div>
@@ -125,7 +125,7 @@
                             <div class="testimonial-inner-img mb-4">
                                 <img src="img/team-3.png" class="img-fluid rounded-circle" alt="">
                             </div>
-                            <p class="text-white fs-7">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores nemo facilis tempora esse explicabo sed! Dignissimos quia ullam pariatur blanditiis sed voluptatum. Totam aut quidem laudantium tempora. Minima, saepe earum!
+                            <p class="text-white fs-7"> I recently had the pleasure of getting my hair styled by the talented team at Shuka, and I couldn't be happier with the experience! From start to finish, every moment was filled with professionalism, creativity, and genuine care.
                             </p>
                             <div class="text-center">
                                 <h5 class="mb-2">Sanora Nyambura</h5>
@@ -145,7 +145,7 @@
                             <div class="testimonial-inner-img mb-4">
                                 <img src="img/team-1.png" class="img-fluid rounded-circle" alt="">
                             </div>
-                            <p class="text-white fs-7">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores nemo facilis tempora esse explicabo sed! Dignissimos quia ullam pariatur blanditiis sed voluptatum. Totam aut quidem laudantium tempora. Minima, saepe earum!
+                            <p class="text-white fs-7">The stylists at Shuka are true artists, each with their own unique flair and expertise. They took the time to understand my vision and preferences, offering valuable insights and suggestions along the way. Their passion for hairstyling was evident in every snip and stroke, and I felt like I was in the hands of true professionals.
                             </p>
                             <div class="text-center">
                                 <h5 class="mb-2">Joan</h5>
@@ -165,7 +165,7 @@
                             <div class="testimonial-inner-img mb-4">
                                 <img src="img/team-2.png" class="img-fluid rounded-circle" alt="">
                             </div>
-                            <p class="text-white fs-7">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores nemo facilis tempora esse explicabo sed! Dignissimos quia ullam pariatur blanditiis sed voluptatum. Totam aut quidem laudantium tempora. Minima, saepe earum!
+                            <p class="text-white fs-7">What truly impressed me was their attention to detail. They didn't just focus on creating a beautiful hairstyle; they also made sure that it complemented my features and personality perfectly. The result was a stunning look that exceeded my expectations and left me feeling like a million bucks!
                             </p>
                             <div class="text-center">
                                 <h5 class="mb-2">Zawadi Esther</h5>
@@ -219,7 +219,6 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Shuka services</h4>
                             <a href=""><i class="fas fa-angle-right me-2"></i> All Services</a>
-                            <a href=""><i class="fas fa-angle-right me-2"></i>Knotless braids</a>
                             <a href=""><i class="fas fa-angle-right me-2"></i>Goddess Braids</a>
                             <a href=""><i class="fas fa-angle-right me-2"></i>Fauxlocs</a>
                             <a href=""><i class="fas fa-angle-right me-2"></i> Butterfly locs</a>
