--- a/about.html
+++ b/about.html
@@ -76,8 +76,8 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
                         <a href="about.html" class="nav-item nav-link">Home</a>
-                        <a href="signup.html" class="nav-item nav-link">Signup</a>
-                        <a href="Login.html" class="nav-item nav-link">Login</a>
+                        <a href="index.php" class="nav-item nav-link">Signup</a>
+                        <a href="LOGIN.php" class="nav-item nav-link">Login</a>
                         
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
