--- a/testimonial.html
+++ b/testimonial.html
@@ -76,20 +76,20 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="about.html" class="nav-item nav-link">Home</a>
                         <a href="index.php" class="nav-item nav-link">Signup</a>
-                        <a href="Login.html" class="nav-item nav-link">Login</a>
+                        <a href="LOGIN.php" class="nav-item nav-link">Login</a>
                        
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-0">
                                 <a href="appointment.html" class="dropdown-item">Appointment</a>
-                                <a href="feature.html" class="dropdown-item">Hairstyle</a>
+                                <a href="feature.html" class="dropdown-item">Hairstyles</a>
                                 <a href="testimonial.html" class="dropdown-item active">Reviews</a>
                             
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                     </div>
-                    <a href="BookAppointment.html" class="btn btn-primary rounded-pill text-white py-2 px-4 flex-wrap flex-sm-shrink-0">Book Appointment</a>
+                    <a href="BookAppointment.php" class="btn btn-primary rounded-pill text-white py-2 px-4 flex-wrap flex-sm-shrink-0">Book Appointment</a>
                 </div>
             </nav>
         </div>
